--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,9 @@
 twig:
-    file_name_pattern: '*.twig'
+  file_name_pattern: "*.twig"
+  debug: "%kernel.debug%"
+  strict_variables: "%kernel.debug%"
+  form_theme: ["bootstrap_5_layout.html.twig"]
 
 when@test:
-    twig:
-        strict_variables: true
+  twig:
+    strict_variables: true
